force-app/main/default/objects/ProposalsBatch__c/ProposalsBatch__c.object-meta.xml
<CustomObject>
    <label>ProposalsBatch</label>
    <nameField>
        <displayFormat>PB-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProposalsBatch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>