force-app/main/default/objects/ProposalsBatch__c/fields/Callout_Failed__c.field-meta.xml
<CustomField>
    <fullName>Callout_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for determining which records failed during the callout.</description>
    <label>Callout Failed</label>
    <type>Checkbox</type>
</CustomField>