force-app/main/default/objects/ProposalsBatch__c/fields/Failed_Message__c.field-meta.xml
<CustomField>
    <fullName>Failed_Message__c</fullName>
    <label>Failed Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>