force-app/main/default/objects/ProposalsBatch__c/fields/proposalId__c.field-meta.xml
<CustomField>
    <fullName>proposalId__c</fullName>
    <label>proposalId</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>